fixed most of the issues
Fixed banner and most of the typography.

Also fixed white space at the bottom.

Added unique type to each card.

--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ a {
   float: right;
   font-size: 4rem;
   padding-top: .5rem;
+  font-family: 'Barlow Condensed', sans-serif;
 }
 
 
@@ -141,6 +142,27 @@ a {
 
   .weather {
     max-height: 100vh;
+  }
+
+  .city {
+    font-size: 4em;
+    padding-left: 0.5em;
+  }
+
+  .cityl {
+    font-size: 4em;
+    padding-left: 2.5em;
+  }
+
+  .cityo {
+    font-size: 4em;
+    padding-left: 2em;
+  }
+
+  .bottom {
+    background-color: #e9534e;
+    padding-top:1em;
+    text-align: center;
   }
 
 }
